# SSO

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.githooks/: .pre-commit-config.yaml  .pre-commit-hooks.yaml
Core/: constants.py  entrypoint.py  models.py  settings.py  sso_config.py  utils.py
Identity/: controller.py  database.py  models.py  routes.py
templates/: auth.html
